[gd_scene load_steps=5 format=3 uid="uid://ru3dx0irhi1l"]

[ext_resource type="Script" path="res://scenes/ui/main_menu/main_menu.gd" id="1_2ja87"]
[ext_resource type="Theme" uid="uid://c2d2vxclxkr4l" path="res://resources/theme.tres" id="1_ei2q4"]
[ext_resource type="PackedScene" uid="uid://csnql7nxh0ab5" path="res://scenes/ui/buttons/animated_button.tscn" id="2_t710u"]
[ext_resource type="PackedScene" uid="uid://cpa0l3wqs8oc7" path="res://scenes/ui/menu_background/menu_background.tscn" id="2_wl47q"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_2ja87")
background_color = Color(0.533333, 0.713726, 0.866667, 1)

[node name="MenuBackground" parent="." instance=ExtResource("2_wl47q")]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ei2q4")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(112, 0)
layout_mode = 2
theme_override_constants/separation = 6

[node name="PlayButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_t710u")]
unique_name_in_owner = true
layout_mode = 2
text = "PLAY"

[node name="OptionButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_t710u")]
unique_name_in_owner = true
layout_mode = 2
text = "OPTIONS"

[node name="QuitButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_t710u")]
unique_name_in_owner = true
layout_mode = 2
text = "QUIT"
